Changes to support dynamic types and static extension methods

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 dependencies {
   compile group: 'org.manifold-systems', name: 'manifold', version: manifoldVersion
+  compile group: 'org.manifold-systems', name: "manifold-ext", version: manifoldVersion
 }
 
 compileJava {
