--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ repositories {
 }
 
 dependencies {
-  compile group: 'org.manifold-systems', name: 'manifold', version: manifoldVersion
-  compile group: 'org.manifold-systems', name: 'manifold-ext', version: manifoldVersion
+  compile group: 'systems.manifold', name: 'manifold', version: manifoldVersion
+  compile group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
 }
 
 compileJava {
