--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ repositories {
 }
 
 dependencies {
-  compile group: 'org.manifold-systems', name: 'manifold', version: manifoldVersion
-  compile group: 'org.manifold-systems', name: 'manifold-ext', version: manifoldVersion
+  compile group: 'systems.manifold', name: 'manifold', version: manifoldVersion
+  compile group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
 }
 
 compileJava {
@@ -39,7 +39,7 @@ afterEvaluate {
 
 intellij {
   pluginName project.name
-  version '2016.3' // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
+  version '2017.2' // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
   plugins = ['ASM Bytecode Outline:0.3.5'] //include ASM in the sandbox by default. Nice.
 
   downloadSources true
