Enable upload to JetBrains plugin portal @ http://plugins.jetbrains.com  - Requires setting JB_PUBLISH_USER and JB_PUBLISH_PASS env vars

--- a/build.gradle
+++ b/build.gradle
@@ -55,3 +55,8 @@ patchPluginXml {
   untilBuild '999.*'
   pluginDescription 'IntelliJ IDEA plugin for Manifold'
 }
+
+publishPlugin {
+  username = System.getenv()['JB_PUBLISH_USER']
+  password = System.getenv()['JB_PUBLISH_PASS']
+}
