In plugin.xml configure ManTypeFinder to be _first_ in order of type finders, as such ManTypeFinder supersedes IJ's main type finder.  This is necessary so we can produce separate versions of a type per module, which is critical for enforcing extension scoping rules. Basically, the scope of an extension class is the scope of the module containing it.  So, for example, extension methods from a String extension class in module A should only apply to A and modules dependent on A.  If module B is not related to A, B should not see the methods added by the String extensions from A.

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 }
 
 compileJava {
-  options.compilerArgs << '-proc:none'
+  options.compilerArgs += ['-proc:none', '-Xplugin:Manifold']
 }
 
 afterEvaluate {
