--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -21,7 +21,7 @@
   </project-components>
 
   <extensions defaultExtensionNs="com.intellij">
-    <java.elementFinder implementation="manifold.ij.extensions.ManTypeFinder"/>
+    <java.elementFinder order="first" implementation="manifold.ij.extensions.ManTypeFinder"/>
     <gotoDeclarationHandler implementation="manifold.ij.extensions.ManGotoDeclarationHandler"/>
     <lang.psiAugmentProvider implementation="manifold.ij.extensions.ManAugmentProvider"/>
     <methodReferencesSearch implementation="manifold.ij.extensions.ExtensionMethodUsageSearcher"/>
