--- a/src/main/resources/messages/Manifold.properties
+++ b/src/main/resources/messages/Manifold.properties
@@ -1,12 +1,12 @@
-action.create.new.extension.class.description=Create new Extension Methods class
-action.create.new.extension.class=Create New Extension Methods Class
+action.create.new.extension.class.description=Create new Extension class
+action.create.new.extension.class=Create New Extension Class
 error.new.artifact.nopackage=Cannot create Manifold artifact without a package
 error.file.template=Unable to process file template {0}
 type.Class=Class
 type.Class.Name=Name
-new.ext.method.class.menu.action.text=Method Extension Class
-new.ext.method.class.menu.action.description=Create new Extension Method Class
+new.ext.method.class.menu.action.text=Extension Class
+new.ext.method.class.menu.action.description=Create new Extension Class
 new.ext.method.class.dlg.InvalidType=This is not a valid Java qualified name
 error.new.class.dlg.title=Cannot Create Class
-new.ext.method.class.progress.text=Creating Extension Method class {0}.{1}
+new.ext.method.class.progress.text=Creating Extension class {0}.{1}
 action.create.extended.type=Extended type
