implement shortNamesCache so that Manifold types are available in IJ features such as Ctrl+N and type completion

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -22,6 +22,7 @@
 
   <extensions defaultExtensionNs="com.intellij">
     <java.elementFinder order="first" implementation="manifold.ij.extensions.ManTypeFinder"/>
+    <java.shortNamesCache implementation="manifold.ij.extensions.ManShortNamesCache"/>
     <gotoDeclarationHandler implementation="manifold.ij.extensions.ManGotoDeclarationHandler"/>
     <lang.psiAugmentProvider implementation="manifold.ij.extensions.ManAugmentProvider"/>
     <methodReferencesSearch implementation="manifold.ij.extensions.ExtensionMethodUsageSearcher"/>
