bootstrap the manifold ij plugin and manifold itself; now using manifold to build manifold and manifold-ij - handle Manifold changes wrt multiple output paths - use IJ's Plugin class loader for the ij plugin manifold host

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,4 +1,4 @@
-<idea-plugin version="2">
+<idea-plugin>
   <id>manifold.ij</id>
   <name>Manifold</name>
   <description>This value is patched by the build script</description>
