- test with latest IJ 2017.2.5 - fix ExtensionClassAnnotator to be compatible with an IJ internal api change - fix ManTypeFinder plugin extension ordering

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,7 +35,7 @@
   </project-components>
 
   <extensions defaultExtensionNs="com.intellij">
-    <java.elementFinder implementation="manifold.ij.extensions.ManTypeFinder" order="first"/>
+    <java.elementFinder implementation="manifold.ij.extensions.ManTypeFinder" order="first, before java"/>
     <java.shortNamesCache implementation="manifold.ij.extensions.ManShortNamesCache"/>
     <gotoDeclarationHandler implementation="manifold.ij.extensions.ManGotoDeclarationHandler"/>
     <lang.psiAugmentProvider implementation="manifold.ij.extensions.ManAugmentProvider"/>
