Implement frameworkSupport extension to support creation of Java projects with optional Manifold support.  Add manifold-all RELEASE version to project module and also adds tools.jar to SDK if not already present.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,6 +35,7 @@
   </project-components>
 
   <extensions defaultExtensionNs="com.intellij">
+    <frameworkSupport implementation="manifold.ij.extensions.ManSupportProvider"/>
     <java.elementFinder implementation="manifold.ij.extensions.ManTypeFinder" order="first, before java"/>
     <java.shortNamesCache implementation="manifold.ij.extensions.ManShortNamesCache"/>
     <gotoDeclarationHandler implementation="manifold.ij.extensions.ManGotoDeclarationHandler"/>
