--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,7 +35,14 @@
   </project-components>
 
   <extensions defaultExtensionNs="com.intellij">
+    <repositoryLibrary name="Manifold">
+      <groupId>systems.manfold</groupId>
+      <artifactId>manifold-all</artifactId>
+    </repositoryLibrary>
+
+    <!--<library.type implementation="manifold.ij.extensions.ManLibraryType"/>-->
     <frameworkSupport implementation="manifold.ij.extensions.ManSupportProvider"/>
+    <framework.type implementation="manifold.ij.extensions.ManFrameworkType"/>
     <java.elementFinder implementation="manifold.ij.extensions.ManTypeFinder" order="first, before java"/>
     <java.shortNamesCache implementation="manifold.ij.extensions.ManShortNamesCache"/>
     <gotoDeclarationHandler implementation="manifold.ij.extensions.ManGotoDeclarationHandler"/>
