- enable Manifold annotator on all supporting resource "languages" e.g., Json.  Add our annotator extension programmatically to each registered language in IJ.  Now issues reported from type manifold via produce() implementation display in the resource editor (see Json). - improve Rename Refactor.  No longer provide heuristics for naming properties etc. Instead map usages before/after rename, use the new names from the newly generate type (via new FeatureType strategy)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,6 +28,12 @@
     </group>
   </actions>
 
+  <application-components>
+    <component>
+      <implementation-class>manifold.ij.core.ManApplicationComponent</implementation-class>
+    </component>
+  </application-components>
+
   <project-components>
     <component>
       <implementation-class>manifold.ij.core.ManProjectComponent</implementation-class>
@@ -47,7 +53,6 @@
     <java.shortNamesCache implementation="manifold.ij.extensions.ManShortNamesCache"/>
     <gotoDeclarationHandler implementation="manifold.ij.extensions.ManGotoDeclarationHandler"/>
     <lang.psiAugmentProvider implementation="manifold.ij.extensions.ManAugmentProvider"/>
-    <!--<annotator language="" implementationClass="manifold.ij.extensions.ManifoldPsiClassAnnotator"/>-->
     <methodReferencesSearch implementation="manifold.ij.extensions.ExtensionMethodUsageSearcher"/>
     <annotator language="JAVA" implementationClass="manifold.ij.extensions.ExtensionClassAnnotator"/>
     <daemon.highlightInfoFilter implementation="manifold.ij.extensions.ManHighlightInfoFilter"/>
