--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ compileJava {
 
 intellij {
   pluginName project.name
-  version '2017.3.1' // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
+  version ijVersion // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
   plugins = ['ASM Bytecode Outline:0.3.5'] //include ASM in the sandbox by default. Nice.
 }
 
