Do a better job of resolving ijVersion

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 version=0.7-SNAPSHOT
 manifoldVersion=0.7-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-ijVersion=2017.3.1
+defaultIjVersion=2017.3.1
