--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ jdk:
   - oraclejdk8
   - oraclejdk9
   - openjdk8
-  - openjdk9
+env:
+  - IJVERSION=2016.3.1
+  - IJVERSION=2017.3.1
+  - IJVERSION=LATEST_EAP
