--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: java
 
 jdk:
-  - oraclejdk8
-  - oraclejdk9
+#  - oraclejdk8
+#  - oraclejdk9
   - openjdk8
 env:
   - IJVERSION=2016.3.1
-  - IJVERSION=2017.3.1
+  - TEST_JRE=oraclejdk8 IJVERSION=2017.3.1
+  - TEST_JRE=oraclejdk9 IJVERSION=2017.3.1
   - IJVERSION=LATEST_EAP
+
+script:
+- jdk_switcher use ${TEST_JRE}
+- ./gradlew check
