--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
       - image: circleci/openjdk:8-jdk
       - image: circleci/openjdk:9-jdk
 
+    working_directory: ~/manifold-ij
+
     environment:
       GRADLE_OPTS: -Dorg.gradle.daemon=false
       TERM: dumb
@@ -33,10 +35,19 @@ jobs:
       - run:
           name: Compile project and test classes
           command: ./gradlew jar testClasses --stacktrace
-
+      - save_cache:
+          paths:
+            - ~/manifold-ij
+          key: v1-repo-{{ checksum .Environment.CIRCLE_SHA1 }}
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: v1-dependencies-{{ checksum "build.gradle" }}
   test8:
     docker:
       - image: circleci/openjdk:8-jdk
+
+    working_directory: ~/manifold-ij
 
     environment:
       GRADLE_OPTS: -Dorg.gradle.daemon=false
@@ -44,6 +55,12 @@ jobs:
       TZ: /usr/share/zoneinfo/America/Los_Angeles
 
     steps:
+      - restore_cache:
+          keys:
+            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "build.gradle" }}
       - run:
           name: Java version check
           command: java -version
@@ -60,6 +77,8 @@ jobs:
   test9:
     docker:
       - image: circleci/openjdk:9-jdk
+
+    working_directory: ~/manifold-ij
 
     environment:
       GRADLE_OPTS: -Dorg.gradle.daemon=false
