--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,11 @@ jobs:
     
     steps:
       - checkout
-#      - restore_cache:
-#          keys:
-#          - v1-dependencies-{{ checksum "build.gradle" }}
-#          # fallback to using the latest cache if no exact match is found
-#          - v1-dependencies-
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "build.gradle" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
       - run:
           name: Java version check
           command: java -version
@@ -43,6 +43,7 @@ jobs:
           paths:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
+
   test8:
     docker:
       - image: circleci/openjdk:8-jdk
@@ -73,6 +74,22 @@ jobs:
       - run:
           name: Run tests
           command: ./gradlew check --stacktrace
+      - run:
+          name: Create test metadata folder
+          command: sudo mkdir -p ~/junit/xml
+      - run:
+          name: Create test stdout folder
+          command: sudo mkdir -p ~/junit/stdout
+      - run:
+          name: Collect test metadata
+          command: sudo find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/xml/ \;
+      - run:
+          name: Collect test stdout
+          command: sudo find . -type f -regex ".*/build/test-results/.*-output.txt" -exec cp {} ~/junit/stdout/ \;
+      - store_artifacts:
+          path: ~/junit
+      - store_test_results:
+          path: ~/junit
 
   test9:
     docker:
@@ -120,6 +137,7 @@ jobs:
 #          paths:
 #            - ~/.gradle
 #          key: v1-dependencies-{{ checksum "build.gradle" }}
+
 workflows:
   version: 2
   build_and_test:
