Add java 8 to the java 9 container

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,9 @@ jobs:
 
     steps:
       - run:
+          name: Add openjdk-8 to machine
+          command: sudo apt-get install openjdk-8-jre
+      - run:
           name: Java version check
           command: java -version
       - run:
