--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ repositories {
   maven { url 'https://oss.jfrog.org/artifactory/libs-snapshot' }
 }
 
+ext {
+  manifoldVersion System.getenv().getOrDefault('MANIFOLD_VERSION', defaultManifoldVersion)
+}
+
 dependencies {
   compile group: 'systems.manifold', name: 'manifold', version: manifoldVersion
   compile group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
