--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,19 +23,10 @@ jobs:
       - run: 
           name: Run tests
           command: ./gradlew check
-      - run:
-          name: Create test metadata folder
-          command: sudo mkdir -p ~/junit/
-      - run:
-          name: Collect test metadata
-          command: sudo find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/ \;
-      - run:
-          name: Collect test stdout
-          command: sudo find . -type f -regex ".*/build/test-results/.*-output.txt" -exec cp {} ~/junit/ \;
       - store_artifacts:
-          path: ~/junit
+          path: ~/project/build/reports/tests
       - store_test_results:
-          path: ~/junit
+          path: ~/project/build/test-results/test
 
       - save_cache:
           paths:
