--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 dependencies {
   compile group: 'systems.manifold', name: 'manifold', version: manifoldVersion
+  compile group: 'systems.manifold', name: 'manifold-util', version: manifoldVersion
   compile group: 'systems.manifold', name: 'manifold-ext', version: manifoldVersion
   testCompile group: 'junit', name: 'junit', version: '4.12'
 }
