- implement resolveScopeProvider so extension method usage resolves from the extension class context, not the extended class context - fix npe involving odd class name resolution

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -62,6 +62,7 @@
     <lang.findUsagesProvider language="TEXT" implementationClass="manifold.ij.extensions.TextFindUsagesProvider"/>
     <renamePsiElementProcessor implementation="manifold.ij.extensions.RenameResourceElementProcessor" order="first"/>
     <renamePsiElementProcessor implementation="manifold.ij.extensions.RenameExtensionMethodProcessor" order="first"/>
+    <resolveScopeProvider implementation="manifold.ij.extensions.ManResolveScopeProvider" order="first"/>
   </extensions>
 
 </idea-plugin>
