--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,11 @@ intellij {
   plugins = ['ASM Bytecode Outline:0.3.5'] //include ASM in the sandbox by default. Nice.
 }
 
+runIde {
+  minHeapSize '1g'
+  maxHeapSize '2g'
+}
+
 patchPluginXml {
   sinceBuild '141.1010'
   untilBuild '999.*'
