Exclude mavenLocal() on CI

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ tasks.withType(JavaCompile) {
 }
 
 repositories {
-  mavenLocal()
+  if(!System.getenv('CI')) {
+    mavenLocal()
+  }
   jcenter()
   maven { url 'https://oss.jfrog.org/artifactory/libs-snapshot' }
 }
