Test pass/fail output

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import org.gradle.api.tasks.testing.logging.TestLogEvent
 import java.util.concurrent.TimeUnit
 
 plugins {
@@ -75,6 +76,10 @@ publishPlugin {
 test {
   //uncomment below to show stdout/stderr in console
   //testLogging.showStandardStreams = true
+
+  testLogging {
+    events TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED
+  }
 
   //set a system property in the test JVM containing the path to manifold-all (it could be under ~/.gradle/caches or ~/.m2/repository)
   systemProperties = ['path.to.manifold.all':project.configurations.manifoldAll.singleFile.absolutePath]
